added wordpress content

--- a/app/_posts/2014-03-01-cir-law.md
+++ b/app/_posts/2014-03-01-cir-law.md
@@ -2,7 +2,7 @@
 layout: work
 title:  "CIR Law"
 categories: work
-image: cirlaw-feature.png
+image: cirlaw-feature.jpg
 ---
 
 I worked at CIR Law Firm from 2008 until 2012. Working in their IT department I wrote .Net applications for automating company processes, and soon before I left, completed a redesign of the companies webpage. The new site runs on the open source Umbraco ASP.Net CMS.
